Updated files with Project # and Date

--- a/additem.html
+++ b/additem.html
@@ -1,8 +1,8 @@
 <!doctype html>
 	<!-- Elijah Freestone -->
-	<!-- VFW 1210 -->
-	<!-- Project 4 -->
-	<!-- 10-14-12 -->
+	<!-- MiU 1211 -->
+	<!-- Project # -->
+	<!-- Date -->
 <html>
 	<head>
 		<link rel="stylesheet" href="css/styles.css" type="text/css" />
