Made WorkingBranch and updated date and project number in html, css, and js files

--- a/additem.html
+++ b/additem.html
@@ -1,8 +1,8 @@
 <!doctype html>
 	<!-- Elijah Freestone -->
 	<!-- MiU 1211 -->
-	<!-- Project # -->
-	<!-- Date -->
+	<!-- Project 1 -->
+	<!-- 10-22-12 -->
 <html>
 	<head>
 		<link rel="stylesheet" href="css/styles.css" type="text/css" />
