--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 	<!-- Elijah Freestone -->
 	<!-- MiU 1211 -->
-	<!-- Project # -->
-	<!-- Date -->
+	<!-- Project 1 -->
+	<!-- 10-22-12 -->
 <html>
 	<head>
 		<!-- Link to CSS -->
