--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		
 	</head>
 	<body>
-		<h1><img src="img/Logo.jpg"></img></h1>
-			<h2>Never forget a date again!</h2>
+		<h1><img src="img/Logo1.jpg"></img></h1>
+			<!-- <h2>Never forget a date again!</h2> -->
 		<!-- Add a Date Link to additem.html -->	
 		<a href="additem.html">Add a Date!</a>
 	</body>
