Tweaked Feature to fit, aligned with css and made whole image into button (with a tag) to additems page

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		
 	</head>
 	<body>
-		<h1><img src="img/Logo1.jpg"></img></h1>
+		<!-- <h1></h1> -->
 			<!-- <h2>Never forget a date again!</h2> -->
 		<!-- Add a Date Link to additem.html -->	
-		<a href="additem.html">Add a Date!</a>
+		<a href="additem.html"><img src="img/Logo1.jpg"></img></a>
 	</body>
 </html>
