Added Event Type buttons for browse feature. Updated index.html accordingly and small tweaks to css

--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
 			</fieldset>
 			<fieldset>
 				<legend>Browse by Event Type</legend>
-					<div id="Browse">	
-						<select id="evtype">
-							<option value="--Choose An Event Type--">--Choose An Event Type--</option>
-							<option value="Anniversary">Anniversary</option>
-							<option value="Appointment">Appointment</option>
-							<option value="Birthday">Birthday</option>
-							<option value="Meeting">Meeting</option>
-							<option value="Other">Other</option>
-						</select>	
-					</div>
+						
+						<a href="#"><img src="img/AnnBtn.jpg"></img></a>
+						<a href="#"><img src="img/AppBtn.jpg"></img></a>
+						<a href="#"><img src="img/BirBtn.jpg"></img></a>
+						<a href="#"><img src="img/MeeBtn.jpg"></img></a>
+						<a href="#"><img src="img/OthBtn.jpg"></img></a>
+					
 			</fieldset>
 			
 		</form>
