Added hand logo to Logo on additem. Various cleanup and tweaking ot index and js

--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
 		<form action="#" method="post" id="searchBrowse" />
 			<fieldset>
 				<legend>Search Dates</legend>
-						<div><label for="searchBox">Search Term: </label><input type="text" id="search" /> <br>
-						<input type="button" value="Search Dates!" id="searchButton" /></div>
+					<div><label for="searchBox">Search Term: </label><input type="text" id="search" /> <br></div>
+						<input type="button" value="Search Dates!" id="searchButton" />
 			</fieldset>
 			<fieldset>
 				<legend>Browse by Event Type</legend>
-						
+					<div>
 						<a href="#"><img src="img/AnnBtn.jpg"></img></a>
 						<a href="#"><img src="img/AppBtn.jpg"></img></a>
 						<a href="#"><img src="img/BirBtn.jpg"></img></a>
 						<a href="#"><img src="img/MeeBtn.jpg"></img></a>
 						<a href="#"><img src="img/OthBtn.jpg"></img></a>
-					
+					</div>
 			</fieldset>
-			
 		</form>
 	</body>
 </html>
