Added basic error 404 html with Error.jpg and linked browse buttons to it.

--- a/Project2/index.html
+++ b/Project2/index.html
@@ -36,11 +36,11 @@
 			<fieldset>
 				<legend>Browse by Event Type</legend>
 					<div>
-						<a href="#"><img src="img/AnnBtn.jpg"></img></a>
-						<a href="#"><img src="img/AppBtn.jpg"></img></a>
-						<a href="#"><img src="img/BirBtn.jpg"></img></a>
-						<a href="#"><img src="img/MeeBtn.jpg"></img></a>
-						<a href="#"><img src="img/OthBtn.jpg"></img></a>
+						<a href="404.html"><img src="img/AnnBtn.jpg"></img></a>
+						<a href="404.html"><img src="img/AppBtn.jpg"></img></a>
+						<a href="404.html"><img src="img/BirBtn.jpg"></img></a>
+						<a href="404.html"><img src="img/MeeBtn.jpg"></img></a>
+						<a href="404.html"><img src="img/OthBtn.jpg"></img></a>
 					</div>
 			</fieldset>
 		</form>
