--- a/Project2/Bronze/additem.html
+++ b/Project2/Bronze/additem.html
@@ -5,73 +5,95 @@
 	<!-- Bronze App -->
 	<!-- 10-26-12 -->
 	
-<html>
+<html lang="en">
 	<head>
-		<link rel="stylesheet" href="css/styles.css" type="text/css" />
-		<!-- Character Set Meta -->
-		<meta charset="utf-8" />
-		<!-- Description Meta -->
-		<meta name="description" content="An app to save important dates, such as Birthdays and Anniversaries." />
-		<!-- Keywords Meta -->
-		<meta name="keywords" content="birthdays, anniversaries, date" />
-		<!-- Robots Meta -->
-		<meta name="robots" content="index, follow" />
-		<!-- Viewport Meta -->
-		<meta name="viewport" content="user-scalable=no, width=device-width" />
-		
-		<!--Page Title-->
-		<title>Save-a-date</title>
+		<meta charset="utf-8">
+	
+	<title>Save-a-date</title>
+	
+	<!--  Mobile viewport optimized: j.mp/bplateviewport -->
+	<meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- Mobile IE needs ClearType for smoothing fonts -->
+	<meta http-equiv="cleartype" content="on">
+	
+	<!-- StyleSheets under here -->
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+	<link rel="stylesheet" href="css/styles.css" type="text/css" />
+	
+	<!-- JavaScript is normally at the end of the body, except for Modernizr which enables HTML5 elements & feature detects -->
+	<script src="js/libs/modernizr.custom.min.js"></script>
+
 	</head>
 	<body>
+		<div data-role="page" id="addItem">
 		<h1><img src="img/Logo.jpg"></img></h1>
-		<form action="#" method="post" id="eventForm" />
-			<fieldset>
+		<form action="#" method="post" id="eventForm" data-role="none"/>
+			<fieldset data-role="none">
 			<legend>Event Info</legend>
-			<span>* fields are required.</span>
+			<span id="notice">* fields are required.</span>
 			<ul id="errors"></ul>
-			<ul>
+			<ul data-role="none">
 		<!-- Type of Event -->
-				<li id="select"><label for="select">*Type of Event:</label></li>
+				<li id="select" data-role="none"><label for="select" data-role="none">*Type of Event:</label></li>
 		<!-- Date of Event -->
-				<li><label for="evdate">*Event Date:</label><input type="date" id="evdate" /></li>
+				<li ><label for="evdate">*Event Date:</label><input data-role="none" type="date" id="evdate" /></li>
 		<!-- Event Description -->
-				<li><label for="evinfo">*Event Information:</label><input type="text" id="evinfo" placeholder="Dads birthday, etc."/></li>
+				<li><label for="evinfo">*Event Information:</label><input data-role="none" type="text" id="evinfo" placeholder="Dads birthday, etc."/></li>
 		<!-- Importance of Event Slider -->
 				<li><label for="importance">Event Importance:</label><br>
-					1 <input type="range" id="importance" min="1" max="5" class="range" value="3" onchange="chosen.value=value"/> 5 <br>		
+					1 <input data-role="none" type="range" id="importance" min="1" max="5" class="range" value="3" onchange="chosen.value=value"/> 5 <br>		
 		<!-- Slider output -->
 					<output id="chosen">3</output></li>
 		<!-- Attendance required?  -->
 				<li>Is Attendance Required?
 					<ul class="checkbox">
-						<li><input type="radio" value="Yes" id="Yes" name="attend" /><label for="Yes">Yes</label></li>
-						<li><input type="radio" value="No" id="No" name="attend" /><label for="No">No</label></li>
-						<li><input type="radio" value="Undecided" id="Undecided" name="attend" /><label for="Undecided">Undecided</label></li>
+						<li><input type="radio" value="Yes" id="Yes" name="attend" data-role="none"/><label for="Yes">Yes</label></li>
+						<li><input type="radio" value="No" id="No" name="attend" data-role="none"/><label for="No">No</label></li>
+						<li><input type="radio" value="Undecided" id="Undecided" name="attend" data-role="none"/><label for="Undecided">Undecided</label></li>
 					</ul>
 				</li>
 			</ul>
 			</fieldset>
-			<fieldset>
+			<fieldset data-role="none">
 			<legend>Event Details</legend>
 		<!-- Event Details (ie location of party etc) -->
-				<label for="details"></label><textarea id="details" placeholder="Party Location, Contact Info, etc."></textarea>
+				<label for="details"></label><textarea data-role="none" id="details" placeholder="Party Location, Contact Info, etc."></textarea>
 		<!-- Hidden Input -->	
 				<input type="hidden" value="true" />
 			</fieldset>
 		<!-- Submit Button -->	
-			<input type="submit" value="Save Date!" id="submit" />
+			<input type="submit" value="Save Date!" id="submit" data-role="none" Data-ajax="false"/>
 			<br>
 		</form>
 		<nav>
 		<!-- Clear Stored Data Link -->
-			<a href="#" id="clearData">Clear Local Data</a> 
+			<a href="#" id="clearData" data-role="none" Data-ajax="false">Clear Local Data</a> 
 		<!-- Display Data Link -->
-			<a href="#" id="displayData">Display Data</a>
+			<a href="#" id="displayData" data-role="none" Data-ajax="false">Display Data</a>
 		<!-- Add New Date Link -->
-			<a href="additem.html" id="addNew" style="display:none;">Add New Date</a>
+			<a href="additem.html" id="addNew" style="display:none;" data-role="none" Data-ajax="false">Add New Date</a>
 		</nav>
+		<div data-role="footer" data-position="fixed" data-id="index" data-theme="a" id="navBar">
+			<div data-role="navbar" >
+				<ul>
+					<li><a href="404.html" Data-ajax="false">Favorite</a></li>
+					<li><a href="404.html" Data-ajax="false">Change</a></li>
+					<li><a href="404.html" Data-ajax="false">Search</a></li>
+				</ul>
+			</div>
+		</div>
+		</div>
+	</div>		
+		
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 		<script type="text/javascript" src="js/json.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+	
 	</body>
+	
 
 </html>
