--- a/Project2/Bronze/additem.html
+++ b/Project2/Bronze/additem.html
@@ -79,8 +79,8 @@
 		<div data-role="footer" data-position="fixed" data-id="index" data-theme="a" id="navBar">
 			<div data-role="navbar" >
 				<ul>
-					<li><a href="404.html" Data-ajax="false">Favorite</a></li>
-					<li><a href="404.html" Data-ajax="false">Change</a></li>
+					<li><a href="Gold/index.html" Data-ajax="false">Gold App</a></li>
+					<li><a href="index.html" Data-ajax="false">Home</a></li>
 					<li><a href="404.html" Data-ajax="false">Search</a></li>
 				</ul>
 			</div>
