Changed Bronze index to thumbnail grid and added new icons for it

--- a/Project2/Bronze/index.html
+++ b/Project2/Bronze/index.html
@@ -37,15 +37,15 @@
 				<div data-role="content">
 				<fieldset>
 					<legend>Browse by Event Type</legend>
-						<ul data-role="listview" data-filter="true" data-theme="b" data-inset="true">
-	
-							<li><a href="404.html" Data-ajax="false">Anniversary</a></li>
-							<li><a href="404.html" Data-ajax="false">Appointment</a></li>
-							<li><a href="404.html" Data-ajax="false">Birthday</a></li>
-							<li><a href="404.html" Data-ajax="false">Meeting</a></li>
-							<li><a href="404.html" Data-ajax="false">Other</a></li>
-	
-						</ul>
+						<div class="ui-grid-b" data-filter="true" data-inset="true">
+							<a class="ui-block-a" href="404.html" Data-ajax="false"><img src="img/AnniversaryGrid.jpg"></a>
+							<a class="ui-block-b" href="404.html" Data-ajax="false"><img src="img/AppointmentGrid.jpg"></a>
+							<a class="ui-block-c" href="404.html" Data-ajax="false"><img src="img/BirthdayGrid.jpg"></a>
+						</div>
+						<div class="ui-grid-a" data-filter="true">
+							<a class="ui-block-a" href="404.html" Data-ajax="false"><img src="img/MeetingGrid.jpg"></a>
+							<a class="ui-block-b" href="404.html" Data-ajax="false"><img src="img/OtherGrid.jpg"></a>
+						</div>
 				</fieldset>
 				</div>			
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
