--- a/Project2/Gold/index.html
+++ b/Project2/Gold/index.html
@@ -329,7 +329,7 @@
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
 				<div data-role="navbar" >
 					<ul>
-						<li><a href="bronze/index.html" Data-ajax="false">Bronze App</a></li>
+						<li><a href="http://efreestone.github.com/MiU/Project2/Bronze/" Data-ajax="false">Bronze App</a></li>
 						<li><a href="index.html" Data-ajax="false">Home</a></li>
 						<li><a href="404.html" Data-ajax="false">Search</a></li>
 					</ul>
