Linked to Gold gh-pages in nav bar

--- a/Project2/Bronze/index.html
+++ b/Project2/Bronze/index.html
@@ -51,7 +51,7 @@
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
 				<div data-role="navbar" >
 					<ul>
-						<li><a href="Gold/index.html" Data-ajax="false">Gold App</a></li>
+						<li><a href="http://efreestone.github.com/MiU/Project2/Gold/" Data-ajax="false">Gold App</a></li>
 						<li><a href="index.html" Data-ajax="false">Home</a></li>
 						<li><a href="404.html" Data-ajax="false">Search</a></li>
 					</ul>
