--- a/Project2/Bronze/additem.html
+++ b/Project2/Bronze/additem.html
@@ -85,7 +85,12 @@
 				</ul>
 			</div>
 		</div>
-	</div>		
+		<!-- div to fix saved data display issue -->
+		<div data-role="content" id="dispData">
+	
+		</div>
+	</div>	
+	
 		
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
