--- a/Project2/Gold/additem.html
+++ b/Project2/Gold/additem.html
@@ -85,6 +85,10 @@
 				</ul>
 			</div>
 		</div>
+		<!-- div to fix saved data display issue -->
+		<div data-role="content" id="dispData">
+	
+		</div>
 	</div>		
 		
 		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
