--- a/Project3/Bronze/index.html
+++ b/Project3/Bronze/index.html
@@ -47,7 +47,83 @@
 							<a class="ui-block-b" href="404.html" Data-ajax="false"><img src="img/OtherGrid.jpg"></a>
 						</div>
 				</fieldset>
-				</div>			
+			</div>
+			<div data-role="content" data-scroll="true" id="newsFeed">	
+				<fieldset id="newsFS">
+					<legend id="recent">Recently Added Events</legend>
+					<ul data-role="listview" data-inset="true">
+						<li data-role="list-divider">Added Oct 30th, 2012</li>					
+							<ul>						
+								<li><img src="img/Other.jpg"></li>
+								<li>Event type: Other</li>
+								<li>Date: 2012-11-06</li>
+								<li>Info: Election Day</li>
+								<li>Importance: 1</li>
+								<li>Is attendance required?: No</li>
+								<li>Event details: Already voted.</li>
+								<ul>
+									<a href="404.html" Data-ajax="false">Edit Date</a><br>
+									<a href="404.html" Data-ajax="false">Delete Date</a>
+								</ul>
+							</ul>
+							<ul>
+								<li><img src="img/Birthday.jpg"></li>
+								<li>Event type: Birthday</li>
+								<li>Date: 2012-11-21</li>
+								<li>Info: My Birthday</li>
+								<li>Importance: 5</li>
+								<li>Is attendance required?: Yes</li>
+								<li>Event details: Partay!!!</li>
+								<ul>
+									<a href="404.html" Data-ajax="false">Edit Date</a><br>
+									<a href="404.html" Data-ajax="false">Delete Date</a>
+								</ul>
+							</ul>
+							<li data-role="list-divider">Added Oct 25th, 2012</li>	
+							<ul>
+								<li><img src="img/Appointment.jpg"></li>
+								<li>Event type: Appointment</li>
+								<li>Date: 2013-03-31</li>
+								<li>Info: Appointment with Gag Committee</li>
+								<li>Importance: 4</li>
+								<li>Is attendance required?: Yes</li>
+								<li>Event details: Last years April Fools gag was good. May be hard to top.</li>
+								<ul>
+									<a href="404.html" Data-ajax="false">Edit Date</a><br>
+									<a href="404.html" Data-ajax="false">Delete Date</a>
+								</ul>
+							</ul>
+							<ul>
+								<li><img src="img/Meeting.jpg"></li>
+								<li>Event type: Meeting</li>
+								<li>Date: 2015-01-01</li>
+								<li>Info: Meeting with Doc</li>
+								<li>Importance: 5</li>
+								<li>Is attendance required?: Yes</li>
+								<li>Event details: Must fix the DeLorean first!!</li>
+								<ul>
+									<a href="404.html" Data-ajax="false">Edit Date</a><br>
+									<a href="404.html" Data-ajax="false">Delete Date</a>
+								</ul>
+							</ul>
+							<li data-role="list-divider">Added Oct 24th, 2012</li>	
+							<ul>
+								<li><img src="img/Anniversary.jpg"></li>
+								<li>Event type: Anniversary</li>
+								<li>Date: 2013-03-26</li>
+								<li>Info: 1 year in school</li>
+								<li>Importance: 2</li>
+								<li>Is attendance required?: No</li>
+								<li>Event details: 12 months down. 20 to go.</li>
+								<ul>
+									<a href="404.html" Data-ajax="false">Edit Date</a><br>
+									<a href="404.html" Data-ajax="false">Delete Date</a>
+								</ul>
+							</ul>
+							<li data-role="list-divider" Data-ajax="false"><a href="404.html" Data-ajax="false">See More</a></li>	
+					</ul>
+				</fieldset>
+			</div>		
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
 				<div data-role="navbar" >
 					<ul>
