Added defaults to bronze. Various cleanup

--- a/Project3/Bronze/additem.html
+++ b/Project3/Bronze/additem.html
@@ -50,9 +50,12 @@
 		<!-- Attendance required?  -->
 				<li>Is Attendance Required?
 					<ul class="checkbox">
-						<li><input type="radio" value="Yes" id="Yes" name="attend" data-role="none"/><label for="Yes">Yes</label></li>
-						<li><input type="radio" value="No" id="No" name="attend" data-role="none"/><label for="No">No</label></li>
-						<li><input type="radio" value="Undecided" id="Undecided" name="attend" data-role="none"/><label for="Undecided">Undecided</label></li>
+						<li><input type="radio" value="Yes" id="Yes" name="attend" data-role="none"/>
+							<label for="Yes">Yes</label></li>
+						<li><input type="radio" value="No" id="No" name="attend" data-role="none"/>
+							<label for="No">No</label></li>
+						<li><input type="radio" value="Undecided" id="Undecided" name="attend" data-role="none" checked="checked"/>
+							<label for="Undecided">Undecided</label></li>
 					</ul>
 				</li>
 			</ul>
