Fixed CRUD but Add New Date link not working

--- a/Project3/Gold/index.html
+++ b/Project3/Gold/index.html
@@ -397,7 +397,7 @@
 		<!-- Display Data Link -->
 				<a href="#" id="displayData" data-role="none" Data-ajax="false">Display Data</a>
 		<!-- Add New Date Link -->
-				<a href="#addItem" id="addNew" style="display:none;" data-role="none" Data-ajax="false">Add New Date</a>
+				<a href="#" id="addNew" style="display:none;" data-role="none" Data-ajax="false">Add New Date</a>
 			</nav>
 		
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
