Updated css to style error404 to match

--- a/Project4/Gold/index.html
+++ b/Project4/Gold/index.html
@@ -424,11 +424,12 @@
 			</div>
 		</div>
 		<div data-role="page" id="error404">
-			<h1><img src="img/Error.jpg"></img></h1>
-				<h2>We're sorry. You appear to have found a page that is under construction or no longer exists</h2>
-				<nav>
-					<a href="#index">Click here to return home</a>
-				</nav>
+			<h1><img src="img/Logo.jpg"></img></h1>
+				<h2><img src="img/Error.jpg"></img></h2>
+					<h3 id="errorMsg">We're sorry. You appear to have found a page that is under construction or no longer exists</h3>
+			<nav>
+				<a href="#index" id="home">Click here to return home</a>
+			</nav>
 		</div>
 	
 	<!-- JavaScript under here -->
