--- a/Project4/Gold/index.html
+++ b/Project4/Gold/index.html
@@ -401,7 +401,7 @@
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
 				<div data-role="navbar" >
 					<ul>
-						<li><a href="http://efreestone.github.com/MiU/Project3/Bronze/" Data-ajax="false">Bronze App</a></li>
+						<li><a href="http://efreestone.github.com/MiU/Project4/Bronze/" Data-ajax="false">Bronze App</a></li>
 						<li><a href="index.html" Data-ajax="false">Home</a></li>
 						<li><a href="#error404" Data-ajax="false">Search</a></li>
 					</ul>
@@ -423,6 +423,7 @@
 				</ul>
 			</div>
 		</div>
+	<!-- End of formErrors -->
 		<div data-role="page" id="error404">
 			<h1><img src="img/Logo.jpg"></img></h1>
 				<h2><img src="img/Error.jpg"></img></h2>
@@ -431,6 +432,7 @@
 				<a href="#index" id="home">Click here to return home</a>
 			</nav>
 		</div>
+	<!-- End of error404 -->
 	
 	<!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
