Updated url to bronze gh-pages

--- a/Project4/Gold/index.html
+++ b/Project4/Gold/index.html
@@ -323,7 +323,7 @@
 			<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
 				<div data-role="navbar" >
 					<ul>
-						<li><a href="http://efreestone.github.com/MiU/Project3/Bronze/" Data-ajax="false">Bronze App</a></li>
+						<li><a href="http://efreestone.github.com/MiU/Project4/Bronze/" Data-ajax="false">Bronze App</a></li>
 						<li><a href="index.html" Data-ajax="false">Home</a></li>
 						<li><a href="#error404" Data-ajax="false">Search</a></li>
 					</ul>
@@ -431,6 +431,15 @@
 			<nav>
 				<a href="#index" id="home">Click here to return home</a>
 			</nav>
+		</div>
+		<div data-role="footer" data-position="fixed" data-id="index" data-theme="a">
+			<div data-role="navbar" >
+				<ul>
+					<li><a href="http://efreestone.github.com/MiU/Project4/Bronze/" Data-ajax="false">Bronze App</a></li>
+					<li><a href="index.html" Data-ajax="false">Home</a></li>
+					<li><a href="#error404" Data-ajax="false">Search</a></li>
+				</ul>
+			</div>
 		</div>
 	<!-- End of error404 -->
 	
