Muddled up css to show how not to style

--- a/Project4/Bronze/additem.html
+++ b/Project4/Bronze/additem.html
@@ -29,7 +29,7 @@
 	</head>
 	<body>
 		<div data-role="page" id="addItem">
-		<h1><img src="img/Logo.jpg"></img></h1>
+		<!-- <h1><img src="img/Logo.jpg"></img></h1> -->
 			<form action="#" method="post" id="eventForm" data-role="none"/>
 			<fieldset data-role="none">
 			<legend>Event Info</legend>
